<resources>
    <string name="app_name">Vat Monitor</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <string name="error_general">Error occurred</string>
    <string name="bad_server_response">Invalid response from server</string>
    <string name="home_nip_label">Nip:</string>
    <string name="home_nip_hint">Nip</string>
    <string name="home_check_button">Check</string>
    <string name="home_nip_not_active">Nip status not verified, check website to be sure!</string>
    <string name="home_nip_ok">"Looks good :)"</string>
    <string name="nip_number_description">Nip number description</string>
</resources>