<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_nip_label" />

        <EditText
            android:id="@+id/nip_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_nip_hint"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/check_status_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_check_button"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/result_text_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/home_nip_ok"
            android:textColor="@android:color/holo_green_light"
            android:visibility="gone" />

        <TextView
            android:id="@+id/result_text_not_valid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/home_nip_not_active"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_background"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop" />

    </RelativeLayout>

</RelativeLayout>